# Serviceroboter

./: README.md  wave_run.bat
control/: CMakeLists.txt  package.xml
control/src/: control.cpp  control_old.cpp
face_recognition/: train.txt
face_recognition/data/: 2_engin1.pgm  2_engin2.pgm  2_engin3.pgm  2_engin4.pgm  2_engin5.pgm  2_engin6.pgm  3_engin1.pgm  3_engin10.pgm  3_engin11.pgm  3_engin12.pgm  3_engin2.pgm  3_engin3.pgm  3_engin4.pgm  3_engin5.pgm  3_engin6.pgm  3_engin7.pgm  3_engin8.pgm  3_engin9.pgm  4_engin1.pgm  4_engin10.pgm  4_engin11.pgm  4_engin12.pgm  4_engin13.pgm  4_engin14.pgm  4_engin15.pgm  4_engin16.pgm  4_engin17.pgm  4_engin18.pgm  4_engin19.pgm  4_engin2.pgm  4_engin20.pgm  4_engin21.pgm  4_engin22.pgm  4_engin23.pgm  4_engin24.pgm  4_engin25.pgm  4_engin3.pgm  4_engin4.pgm  4_engin5.pgm  4_engin6.pgm  (+3 more)
hsmakata/hsmakata/: CMakeLists.txt  package.xml
hsmakata/hsmakata_bringup/: CMakeLists.txt  package.xml
hsmakata/hsmakata_description/: CMakeLists.txt  package.xml
hsmakata/hsmakata_dynamixel_conmmander/: CMakeLists.txt  package.xml
hsmakata/hsmakata_joint_commander/: CMakeLists.txt  package.xml
hsmakata/hsmakata_katana_test/: CMakeLists.txt  package.xml
hsmakata/hsmakata_moveit_ikfast_manipulator_plugin/: CMakeLists.txt  package.xml
hsmakata/hsmakata_pick_n_place/: CMakeLists.txt  package.xml
object_recog/cloudGrabber/: CMakeLists.txt  package.xml
object_recog/cylRecognition/: package.xml
object_recog/object_recog/: package.xml
pioneer/: CMakeLists.txt  package.xml
windows/: CMakeLists.txt  package.xml
(+20 files in other folders)
