<package>
  <name>object_recog</name>
  <version>0.0.0</version>
  <description>
    stack for object_recog.
  </description>

  <maintainer email="engin@todo.todo">engin</maintainer>
  <license>TODO</license>

  <run_depend>cloudGrabber</run_depend>
  <run_depend>cylRecognition</run_depend>
  <run_depend>showObjects</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>
</package>
